--- a/DzejoljiKB.html
+++ b/DzejoljiKB.html
@@ -28,7 +28,7 @@
 				<img src="Ziema.jpg" alt="Ziemas bilde" class="img1"></div>
 		</div>
 		<div class="tabs">
-			<div><a href="PortfolioKB.html">Portfolio</a></div>
+			<div><a href="index.html">Portfolio</a></div>
 			<div><a href="BiogrāfijaKB.html">Biogrāfija</a></div>
 			<div><a href="DzejoljiKB.html">Dzejoļi</a></div>
 		</div>
