--- a/BiogrāfijaKB.html
+++ b/BiogrāfijaKB.html
@@ -19,7 +19,7 @@
 			</div>
 		</div>
 		<div class="tabs">
-			<div><a href="PortfolioKB.html">Portfolio</a></div>
+			<div><a href="index.html">Portfolio</a></div>
 			<div><a href="BiogrāfijaKB.html">Biogrāfija</a></div>
 			<div><a href="DzejoljiKB.html">Dzejoļi</a></div>
 		</div>
