--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="column" style="background-color:lightgreen;"><img src="Seja.jpg" alt="Mana bilde" class="img1" width="260" height="260"></div>
 	</div>
 	<div class="tabs">
-		<div><a href="PortfolioKB.html">Portfolio</a></div>
+		<div><a href="index.html">Portfolio</a></div>
 		<div><a href="BiogrāfijaKB.html">Biogrāfija</a></div>
 		<div><a href="DzejoljiKB.html">Dzejoļi</a></div>
 	</div>
